# docs/swagger.json
@@ -18,7 +18,53 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
-        "/users/:id": {
+        "/users/login": {
+            "post": {
+                "description": "Authenticates user and returns JWT token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Login",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/LoginResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/register": {
+            "post": {
+                "description": "Authenticates user and returns JWT token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Register",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/RegisterResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
             "put": {
                 "security": [
                     {
@@ -67,52 +113,6 @@
                         "description": "Success",
                         "schema": {
                             "$ref": "#/definitions/DeleteUserResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/login": {
-            "post": {
-                "description": "Authenticates user and returns JWT token",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Login",
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/LoginResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/register": {
-            "post": {
-                "description": "Authenticates user and returns JWT token",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Register",
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/RegisterResponse"
                         }
                     }
                 }
@@ -166,10 +166,6 @@
                     "type": "integer",
                     "example": 18
                 },
-                "customer_name": {
-                    "type": "string",
-                    "example": "adnsm"
-                },
                 "email": {
                     "type": "string",
                     "example": "abdianrizky11@gmail.com"
@@ -181,6 +177,10 @@
                 "updated_at": {
                     "type": "string",
                     "example": "2022-10-10T11:52:28.431369Z"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "adnsm"
                 }
             }
         }
